[fix] overflow bug

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -3,6 +3,7 @@
     border-radius: 10px;
     height: 100vh;
     width: 100%;
+    overflow: auto;
     padding: 10px 40px;
 }
 
